--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 *.csv
 .venv
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+.Python
+build/
+
+# IDEs
+.vscode/
